--- a/AlzheimersAnalysis.Rmd
+++ b/AlzheimersAnalysis.Rmd
@@ -49,6 +49,14 @@ First, let's examine our neural network model, which predicts whether a person h
   
   ![Neural Network Diagram](NeuralNet.png)
 
+Input layer: n = 32
+
+Hidden layer 1: n = 64
+
+Hidden layer 2: n = 32
+
+Output layer: n = 1
+
 ## Model Information
   
 The model employs the ReLU activation function, which enhances the efficiency of training and the overall performance of neural networks, particularly when dealing with non-linear data. ReLU introduces non-linearity by allowing positive values to pass through unchanged while setting negative values to zero. This not only accelerates the convergence of the training process but also helps mitigate the vanishing gradient problem, a common issue in deep networks. The ReLU improves the network's ability to learn complex patterns and relationships within the data.
