--- a/AlzheimersAnalysis.Rmd
+++ b/AlzheimersAnalysis.Rmd
@@ -138,6 +138,10 @@ knitr::include_graphics("Epoch_training_loss.png")
 
 # Decision Tree (Jeremy Udo, Alina Bangash, Sneha Jacob):
 
+Our second model will be using a decision tree to evaluate which variables are strongly associated with Alzheimer’s disease. By utilizing a decision tree, we can easily interpret data and be able to deal with non-linear relationships. Additionally, decision trees have proven to handle categorical data effectively. However, this model can lead to high variance, which can be managed with appropriate techniques.
+
+^PICTURE OF DECISION TREE^
+
 ## Model Formula: 
 Our model formula for the decision tree is: \
 *Diagnosis ~ PatientID + Age + Gender + Ethnicity + ... + DificultyCompletingTasks + Forgetfulness + Diagnosis + DoctorInCharge*
