--- a/AlzheimersAnalysis.Rmd
+++ b/AlzheimersAnalysis.Rmd
@@ -142,10 +142,15 @@ knitr::include_graphics("Epoch_training_loss.png")
 Our model formula for the decision tree is: \
 *Diagnosis ~ PatientID + Age + Gender + Ethnicity + ... + DificultyCompletingTasks + Forgetfulness + Diagnosis + DoctorInCharge*
 
-We decided to go forth with a decision tree since our response variable is qualitative. For the unpruned tree, we decided to use all thirty-five variables. Using this tree-based model allowed for an easier undestanding of which factors are associated with the diagnosis of Alzhiemer's Disease and through the classification tree, we can get a better understanding of which factors are most important through pruning. 
+We decided to go forth with a decision tree since our response variable is qualitative. For the unpruned tree, we decided to use all thirty-five variables. Using this tree-based model allowed for an easier understanding of which factors are associated with the diagnosis of Alzheimer's Disease and through the classification tree, we can get a better understanding of which factors are most important through pruning. \
 
 ```{r}
 library(tree)
+
+build_decision_tree <- function(train_data) {
+  decision_tree <- tree(Diagnosis ~ ., data = train_data)  # build d_tree using training data
+  return(decision_tree)
+}
 
 ```
 
