included accuracy + error rates for decision tree

--- a/AlzheimersAnalysis.Rmd
+++ b/AlzheimersAnalysis.Rmd
@@ -158,7 +158,8 @@ build_decision_tree <- function(train_data) {
 }
 
 ```
-
+\ 
+For this base tree we had a 93.95% accuracy rate and an error rate of 6.04%, demonstrating the unpruned trees ability to accurately predict whether or not a person is diagnosed with Alzheimer's Disease. 
 
 # Conclusion: 
 
