--- a/AlzheimersAnalysis.Rmd
+++ b/AlzheimersAnalysis.Rmd
@@ -174,6 +174,14 @@ Overall, our comparison of the decision tree model and the neural network model 
 
 ^^MAYBE ADD MORE IDKK
 
+\newpage
+
+# Bibliography:
+
+Kharoua, Rabie El. “Alzheimer’s Disease Dataset.” Kaggle, 11 June 2024,  
+  www.kaggle.com/datasets/rabieelkharoua/alzheimers-disease-dataset.
+
+
 
 
 
